# INTEGRATE-VHF

./: CMakeLists.txt  Dockerfile  Dockerfile.debug  DockerfileOld  DockerfileOld.debug  README.md
CMakeModules/: VersionHelper.cmake
include/: ALGraph.cpp  ALGraph.h  Alignment.h  Artifact1.h  BWT.h  BreakPoint.h  Constaints.h  Dna.h  FocalRegionHandler.h  FusionGraph.h  Gene.h  GffHelper.h  HitsCounter.h  LowComplexFinder.h  MyBamHeader.h  MyBamWrap.h  MyTypes.h  Reference.h  Result.h  Rna.h  RunCode.h  SuffixArray.h  SuffixArray2.h  TidHandler.h  Timer.hpp  Updator.h  Util.h  VirusLoader.h  version.h.in
src/: ALGraph.cpp  ALGraph.h  Alignment.cpp  Alignment.h  Artifact1.cpp  Artifact1.h  BWIndex.h  BWT.cpp  BWT.h  BreakPoint.cpp  BreakPoint.h  CMakeLists.txt  Constaints.h  Dna.cpp  FocalRegionHandler.cpp  FocalRegionHandler.h  FusionGraph.cpp  Gene.cpp  Gene.h  GffHelper.cpp  HitsCounter.cpp  LowComplexFinder.cpp  LowComplexFinder.h  MyBamHeader.cpp  MyBamHeader.h  MyBamWrap.cpp  MyBamWrap.h  MyTypes.h  Reference.cpp  Reference.h  Result.cpp  Result.h  Rna.cpp  RunCode.cpp  RunCode.h  SuffixArray2.cpp  SuffixArray2.h  TidHandler.cpp  Updator.cpp  Util.cpp  (+3 more)
test/: TestBWIndex.cpp
